# Homework

./: CMakeLists.txt  MAIN.cpp  README.md
1stSemester/LaboratoryWork1/: Task.txt  main.h
1stSemester/LaboratoryWork2/: LongNumber.h  Mathematics.h  Task.txt  main.h
1stSemester/LaboratoryWork3/: Point.h  Segment.h  Square.h  Task.txt  main.h
1stSemester/LaboratoryWork4/: Functions.h  Task.txt  main.h
1stSemester/LaboratoryWork5/: Task  main.h
2ndSemester/All_Tasks/: lab1.doc  lab2a.doc  lab2b.doc  lab3a.doc  lab3b.doc  lab3c.doc  lab4.doc  lab5.doc  lab6.doc  lab7.docx
2ndSemester/LaboratoryWork1/: Bench.txt  DataBase_txt.txt  Date.h  Destination.h  Task.txt  Train.h  main.h  test.txt  workWithDatabases.h
2ndSemester/LaboratoryWork2/: ArrayQueue.h  LinkedQueue.h  Position.h  Task.txt  VectorQueue.h  main.h
2ndSemester/LaboratoryWork2a/: main.h
2ndSemester/LaboratoryWork2b/: Task.txt  Task11.h  Task17.h  Task9.h  main.h
2ndSemester/LaboratoryWork3a/: Coordinates.h  OperatingModes.h  Sorts.h  Task.txt  main.h
2ndSemester/LaboratoryWork3b/: Task.txt  main.h
2ndSemester/LaboratoryWork4/: Task.txt  main.h
2ndSemester/LaboratoryWork5/: Task.txt  main.h
2ndSemester/LaboratoryWork6/: Task.txt  main.h
3rdSemester/LaboratoryWork1/: ArrayList.h  CMakeLists.txt  List.h  README.md  main.cpp
3rdSemester/leetcode/: Problem1.java  Problem11.java  Problem12.java  Problem13.java  Problem14.java  Problem16.java  Problem17.java  Problem18.java  Problem2.java  Problem20.java  Problem21.java  Problem3.java  Problem4.java  Problem5.java  Problem6.java  (+3 more)
(+93 files in other folders)
